Source/WebCore: Fix for incorrect/offset image in CSS filters (non-composited path) https://bugs.webkit.org/show_bug.cgi?id=78626

Reviewed by Darin Adler.

Test: css3/filters/multiple-filters-invalidation.html

* rendering/FilterEffectRenderer.cpp:
(WebCore::FilterEffectRenderer::prepare):
When invalidating results, invalidate all intermediate filter
results, not just the last effect's result.

LayoutTests: New test to exercise invalidation of multiple CSS filters.
https://bugs.webkit.org/show_bug.cgi?id=78626

Reviewed by Darin Adler.

* css3/filters/multiple-filters-invalidation-expected.txt: Added.
* css3/filters/multiple-filters-invalidation.html: Added.
* platform/mac-snowleopard/css3/filters/multiple-filters-invalidation-expected.png: Added.


Canonical link: https://commits.webkit.org/95664@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@107822 268f45cc-cd09-0410-ab3c-d52691b4dbfc